# DualVerse

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android.yml  build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rom.ini
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/java/com/dualverse/: DualVerseApplication.kt
app/src/main/java/com/dualverse/core/accounts/: AccountManager.kt
app/src/main/java/com/dualverse/core/cloudsync/: CloudSyncManager.kt
app/src/main/java/com/dualverse/core/container/: ContainerLoader.kt
app/src/main/java/com/dualverse/core/graphics/: GraphicsRendererSelector.kt
app/src/main/java/com/dualverse/core/multiinstance/: MultiInstanceManager.kt
app/src/main/java/com/dualverse/core/overlay/: FloatingOverlayManager.kt
app/src/main/java/com/dualverse/core/performance/: PerformanceProfiles.kt
app/src/main/java/com/dualverse/core/rom/: RomManager.kt
app/src/main/java/com/dualverse/core/romselector/: CustomRomAdder.kt  (+1 more)
app/src/main/java/com/dualverse/di/: CoreModule.kt
app/src/main/java/com/dualverse/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/res/drawable/: ic_shortcut_accounts.xml  ic_shortcut_clone.xml  ic_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  shortcuts.xml
scripts/: download-rom.sh  termux-install.sh
(+17 files in other folders)
